--- a/BBC_Interview.ipynb
+++ b/BBC_Interview.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMk9hkLyTZETgQgIiLEZn+i"
+      "authorship_tag": "ABX9TyOmWwdLFdk9Ek9n02ayvFhS",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/drOluOla/Senior_Principal_Data_Scientist_NLP/blob/main/BBC_Interview.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -63,15 +74,6 @@
       "metadata": {
         "id": "3WICyVOYcMR0"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "X59SRlEhf6zK"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
