Add general hypothesis to note in ML

--- a/BBC_Interview.ipynb
+++ b/BBC_Interview.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmWwdLFdk9Ek9n02ayvFhS",
+      "authorship_tag": "ABX9TyPaSsCC0nCaG7GAmqoHPMbF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,9 +30,20 @@
       "cell_type": "markdown",
       "source": [
         "### Table of Content\n",
+        "#### Question Dump\n",
+        "  - Why do llms hallucinate\n",
+        "  - How do we reduce hallucination\n",
+        "\n",
         "#### MLOPs\n",
         "  - Conventional MLOPs\n",
         "  - NLP/VLLMs MLOPs\n",
+        "    - Model Merging\n",
+        "    - Model Distillation\n",
+        "    - Some key hypothesis\n",
+        "      - Distributional Hypothesis\n",
+        "      - Linear Hypothesis\n",
+        "      - Manifold Hypothesis\n",
+        "      - Platonic Hypothesis\n",
         "\n",
         "#### Coding Challenge\n",
         "  - Python Basics\n",
@@ -43,6 +54,8 @@
         "  - NLP Basics\n",
         "\n",
         "#### Culture Fit\n",
+        "- Leadership\n",
+        "  -\n",
         "- Values\n",
         "  - https://performancemanager.successfactors.eu/S001190811T2/Our_BBC_Values.pdf\n",
         "  - How have you dealt with difficult situations at work\n",
@@ -60,7 +73,7 @@
         "    - *Respect*\n",
         "        - *Bring your full attention to people and\n",
         "        situations recognising and understanding\n",
-        "        others’ emotions, ideas and perspectives*\n",
+        "        others' emotions, ideas and perspectives*\n",
         "        - *Individual and collective high performance\n",
         "        matters. Be commercially aware,\n",
         "        environmentally responsible and results\n",
@@ -74,6 +87,15 @@
       "metadata": {
         "id": "3WICyVOYcMR0"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3qATrsEB9J_Y"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
