--- a/LLM_from_Scratch_ch03.ipynb
+++ b/LLM_from_Scratch_ch03.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e58f33e8-5dc9-4dd5-ab84-5a011fa11d92",
    "metadata": {},
    "outputs": [
@@ -2023,7 +2023,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "deeplearning",
    "language": "python",
    "name": "python3"
   },
@@ -2037,7 +2037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
