--- a/i_dot_ai_backup_final_3.ipynb
+++ b/i_dot_ai_backup_final_3.ipynb
@@ -427,7 +427,7 @@
         "        \"voice\": \"alloy\",\n",
         "        \"speed\": 1.0,\n",
         "        \"description\": \"Professional & Welcoming\",\n",
-        "        \"emoji\": \"👩‍💼\",\n",
+        "        \"emoji\": \"🧠\",\n",
         "        \"color\": \"#FF6B6B\",\n",
         "        \"specialty\": \"HR Policies & Benefits\"\n",
         "    },\n",
@@ -435,7 +435,7 @@
         "        \"voice\": \"sage\",\n",
         "        \"speed\": 1.1,\n",
         "        \"description\": \"Technical & Helpful\",\n",
-        "        \"emoji\": \"💻\",\n",
+        "        \"emoji\": \"📡\",\n",
         "        \"color\": \"#4ECDC4\",\n",
         "        \"specialty\": \"IT Setup & Support\"\n",
         "    },\n",
@@ -443,7 +443,7 @@
         "        \"voice\": \"echo\",\n",
         "        \"speed\": 1.0,\n",
         "        \"description\": \"Supportive & Strategic\",\n",
-        "        \"emoji\": \"📊\",\n",
+        "        \"emoji\": \"🔮\",\n",
         "        \"color\": \"#45B7B8\",\n",
         "        \"specialty\": \"Team Leadership & Goals\"\n",
         "    },\n",
@@ -451,7 +451,7 @@
         "        \"voice\": \"nova\",\n",
         "        \"speed\": 1.0,\n",
         "        \"description\": \"Friendly & Collaborative\",\n",
-        "        \"emoji\": \"🤖\",\n",
+        "        \"emoji\": \"⚡\",\n",
         "        \"color\": \"#95E1D3\",\n",
         "        \"specialty\": \"General Workplace Support\"\n",
         "    }\n",
@@ -460,7 +460,7 @@
       "metadata": {
         "id": "-2zCLmTY8KDr"
       },
-      "execution_count": 4,
+      "execution_count": 121,
       "outputs": []
     },
     {
@@ -968,7 +968,7 @@
         "        # Update avatars with current speaker highlighted\n",
         "        hr_avatar = create_agent_avatar(\"HR Manager\", active_agent == \"HR Manager\")\n",
         "        ai_colleague_avatar = create_agent_avatar(\"AI Colleague\", active_agent == \"AI Colleague\")\n",
-        "        it_avatar = create_agent_avatar(\"ITStaff\", active_agent == \"ITStaff\")\n",
+        "        it_avatar = create_agent_avatar(\"IT Staff\", active_agent == \"IT Staff\")\n",
         "        manager_avatar = create_agent_avatar(\"Line Manager\", active_agent == \"Line Manager\")\n",
         "\n",
         "        return (output_audio, user_text, status_message,\n",
@@ -981,7 +981,7 @@
       "metadata": {
         "id": "pKJ87zpWlQHo"
       },
-      "execution_count": 5,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -1083,7 +1083,7 @@
       "metadata": {
         "id": "ibl7juTa9F6C"
       },
-      "execution_count": 6,
+      "execution_count": 123,
       "outputs": []
     },
     {
@@ -1144,7 +1144,7 @@
       "metadata": {
         "id": "xX5oOU7K9XaK"
       },
-      "execution_count": 7,
+      "execution_count": 124,
       "outputs": []
     },
     {
@@ -1168,7 +1168,7 @@
         "            margin: 0 auto !important;\n",
         "        }\n",
         "\n",
-        "        .fancy-record-btn {\n",
+        "        .send-btn {\n",
         "            background: linear-gradient(135deg, #27ae60 0%, #229954 100%) !important;\n",
         "            border: none !important;\n",
         "            border-radius: 12px !important;\n",
@@ -1178,18 +1178,17 @@
         "            box-shadow: 0 4px 15px rgba(39, 174, 96, 0.4) !important;\n",
         "            transition: all 0.3s ease !important;\n",
         "        }\n",
-        "        .fancy-record-btn:hover {\n",
+        "        .send-btn:hover {\n",
         "            transform: translateY(-2px) !important;\n",
         "            box-shadow: 0 6px 20px rgba(39, 174, 96, 0.6) !important;\n",
         "        }\n",
-        "        .fancy-record-btn:active {\n",
+        "        .send-btn:active {\n",
         "            transform: translateY(0px) !important;\n",
         "        }\n",
         "\n",
         "        /* Audio record button styling */\n",
         "        .audio-container button,\n",
-        "        .gradio-audio button,\n",
-        "        button[aria-label*=\"Record\"] {\n",
+        "        .gradio-audio button{\n",
         "            background: linear-gradient(135deg, #e74c3c 0%, #c0392b 100%) !important;\n",
         "            border: 2px solid #c0392b !important;\n",
         "            color: white !important;\n",
@@ -1201,28 +1200,11 @@
         "            border-color: #a93226 !important;\n",
         "        }\n",
         "\n",
-        "        /* Record button inner elements */\n",
-        "        .audio-container button::before,\n",
-        "        .audio-container button .record-dot,\n",
-        "        .audio-container button svg circle,\n",
-        "        .audio-container button svg path,\n",
-        "        .gradio-audio button::before,\n",
-        "        .gradio-audio button .record-dot,\n",
-        "        .gradio-audio button svg circle,\n",
-        "        .gradio-audio button svg path,\n",
-        "        button[aria-label*=\"Record\"]::before,\n",
-        "        button[aria-label*=\"Record\"] .record-dot,\n",
-        "        button[aria-label*=\"Record\"] svg circle,\n",
-        "        button[aria-label*=\"Record\"] svg path {\n",
-        "            background: #ff8c00 !important;\n",
-        "            fill: #ff8c00 !important;\n",
-        "            color: #ff8c00 !important;\n",
-        "        }\n",
-        "\n",
         "        /* Hide X/clear buttons */\n",
-        "        button[title*=\"Clear\"], button[aria-label*=\"Close\"] {\n",
+        "        button[title*=\"Clear\"] {\n",
         "            display: none !important;\n",
         "        }\n",
+        "\n",
         "    \"\"\") as iface:\n",
         "        gr.Markdown(\"\"\"\n",
         "        # 🏢 Employee Onboarding Voice Conference\n",
@@ -1274,12 +1256,12 @@
         "\n",
         "                with gr.Row():\n",
         "                    submit_btn = gr.Button(\n",
-        "                        \"🎙️ Send Audio\",\n",
+        "                        \"Send Audio 🎙️\",\n",
         "                        variant=\"primary\",\n",
         "                        scale=2,\n",
-        "                        elem_classes=\"fancy-record-btn\"\n",
+        "                        elem_classes=\"send-btn\"\n",
         "                    )\n",
-        "                    clear_audio_btn = gr.Button(\"🔄 Reset\", variant=\"secondary\", scale=1)\n",
+        "                    clear_audio_btn = gr.Button(\"🌀 Reset\", variant=\"secondary\", scale=1)\n",
         "\n",
         "                audio_output = gr.Audio(\n",
         "                    label=\"🎧 Team Response\",\n",
@@ -1296,10 +1278,10 @@
         "                    lines=3\n",
         "                )\n",
         "                text_submit_btn = gr.Button(\n",
-        "                    \"🎙️ Send Text\",\n",
+        "                    \"Send Text 📝\",\n",
         "                    variant=\"primary\",\n",
         "                    scale=2,\n",
-        "                    elem_classes=\"fancy-record-btn\"\n",
+        "                    elem_classes=\"send-btn\"\n",
         "                )\n",
         "\n",
         "                # Status display\n",
@@ -1311,7 +1293,7 @@
         "                )\n",
         "\n",
         "                # Additional controls\n",
-        "                clear_session_btn = gr.Button(\"🔄 Start Fresh Onboarding Session\", variant=\"secondary\")\n",
+        "                clear_session_btn = gr.Button(\"🌀 Start Fresh Onboarding Session\", variant=\"secondary\")\n",
         "\n",
         "        # Event handlers\n",
         "        submit_btn.click(\n",
@@ -1368,7 +1350,7 @@
       "metadata": {
         "id": "I3_rVlDDL5pl"
       },
-      "execution_count": 91,
+      "execution_count": 125,
       "outputs": []
     },
     {
@@ -1413,11 +1395,11 @@
         "id": "5z9UWq0N_AtY",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 854
+          "height": 889
         },
-        "outputId": "a4b45699-bba1-4c33-b695-32c5a81fb767"
+        "outputId": "e27a93fb-6743-4cf0-80a2-2d929b1e0533"
       },
-      "execution_count": null,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "stream",
@@ -1438,7 +1420,7 @@
             "   - Natural language understanding drives all routing decisions\n",
             "   - Enhanced decision making using prompt_with_handoff_instructions\n",
             "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
-            "* Running on public URL: https://7269108e82bba6dece.gradio.live\n",
+            "* Running on public URL: https://12352f966d89a3c1c0.gradio.live\n",
             "\n",
             "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -1450,10 +1432,18 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://7269108e82bba6dece.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://12352f966d89a3c1c0.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Keyboard interruption in main thread... closing server.\n",
+            "Killing tunnel 127.0.0.1:7860 <> https://12352f966d89a3c1c0.gradio.live\n"
+          ]
         }
       ]
     },
@@ -1527,7 +1517,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOHLCwhexoN1q/Wr8RxiH3o",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyN0y2bLFGD5YkuxdMa+Lz+e",
       "include_colab_link": true
     },
     "kernelspec": {
