--- a/i_dot_ai_backup_final_3.ipynb
+++ b/i_dot_ai_backup_final_3.ipynb
@@ -16,7 +16,7 @@
         "# **Personal Statement**\n",
         "On 13th January 2025, during the unveiling of the AI Opportunities White Paper, the UK government announced it accepted all 50 recommendations from the AI Action Plan working group. As I was watching live, I was also reflecting on how far AI (or Machine Learning as we used to call it) has come. Just a few years ago, it was nearly impossible to install the drivers needed to train AI on GPUs. Now, the tech, tools and integrations have improved so much that entire governments are placing their hopes for economic progress on it.\n",
         "\n",
-        "The experience felt like a light bulb moment that led me to make a personal commitment to contribute to this once in a generation transformative era. Eventually inspiring me to apply for the role of Head AI Opportunites at I.AI. Having also just become a UK citizen after 15 years living in England, I recognized this as the perfect opportunity to contribute to the nation that has profoundly influenced my adult journey and provided me with invaluable expertise in AI/ML across research, industry, and entrepreneurship.\n",
+        "The experience felt like a light bulb moment that led me to make a personal commitment to contribute to this once in a generation transformative era. Eventually inspiring me to apply for the role of Head AI Opportunites at I.AI. Having also just become a UK citizen after 15 years living in England, I recognized this as the perfect opportunity to contribute to the nation that has profoundly influenced my adult journey and provided me with invaluable expertise in AI/ML across academic research, industry and entrepreneurship applications.\n",
         "\n",
         "To remind myself of this commitment, I took a sceenshot(seen below) of one of the key moments in the live announcement.\n",
         "\n",
@@ -40,11 +40,16 @@
       "cell_type": "markdown",
       "source": [
         "# **The Problem**\n",
-        "The use case I have choosen for this technical assessment\n",
+        "According to GOV.UK (n.d.a), the UK government comprises 24 Ministerial Departments, 20 Non-ministerial departments, 424 Agencies and other public bodies, 115 High Profile groups, and 19 Public corporations. This extensive organizational structure presents substantial opportunities for AI implementation across the public sector. However, finding and accessing potential AI use-cases for most impactful projects can be very challenging.\n",
         "\n",
-        "In light of the government's commitment to early intervention to prevent young people from losing touch with education or employment before the age of 18, and its promise to offer tailored careers advice and meaningful work experience, how can AI-driven digital solutions be effectively designed and implemented as part of the new universal jobs and careers service?\n",
+        "A good place to start and one strategy I will be adopting for this assessment is to follow the classification suggested by Incubator AI (2024) in their AI taxonomy. Where the decision on what AI use-case to deliver is guided by the user and technical challenge rather than by policy.\n",
         "\n",
-        "These solutions must support scalable and personalised delivery of guidance, help young people confidently identify their next steps, and provide access to work experience opportunities, including progress toward two weeks' experience. They should also ensure support reaches those under 18 who are not in school or college, through close collaboration with local stakeholders, ultimately enabling successful transitions to post-18 pathways.\n",
+        "Generally any individual making a transition from one thing to the other\n",
+        "\n",
+        "\n",
+        "Specifically, and for this assessment the focus is on users/new employees often struggle to settle into new roles following traditional onboarding techniques.\n",
+        "\n",
+        "\n",
         "\n",
         "\n"
       ],
@@ -56,6 +61,13 @@
       "cell_type": "markdown",
       "source": [
         "# **The Opportunity**\n",
+        "\n",
+        "In light of the government's commitment to early intervention to prevent young people from losing touch with education or employment before the age of 18, and its promise to offer tailored careers advice and meaningful work experience, how can AI-driven digital solutions be effectively designed and implemented as part of the new universal jobs and careers service?\n",
+        "\n",
+        "These solutions must support scalable and personalised delivery of guidance, help young people confidently identify their next steps, and provide access to work experience opportunities, including progress toward two weeks' experience. They should also ensure support reaches those under 18 who are not in school or college, through close collaboration with local stakeholders, ultimately enabling successful transitions to post-18 pathways.\n",
+        "\n",
+        "\n",
+        "\n",
         "To support the government's ambition of preventing disengagement from education or employment before the age of 18, we propose the integration of AI-powered simulated work trials as part of the new universal jobs and careers service. Building on the approach developed by StintAgents, these simulations offer young people immersive, low-risk introductions to real-world tasks across a range of sectors. Designed to replicate the decision-making, communication, and problem-solving involved in actual roles, the trials can be tailored to individual interests and skill levels, enabling personalised career exploration at scale. By partnering with schools, colleges, and local organisations, this solution can extend meaningful work experience to all young people, including those not currently in education, and equip them with the confidence and insight needed to navigate their next steps and transition successfully into employment, education, or training after 18."
       ],
       "metadata": {
@@ -1520,6 +1532,19 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Reference**\n",
+        "\n",
+        "*   GOV.UK. (n.d.a). Departments, agencies and public bodies. GOV.UK. Retrieved May 28, 2025, from https://www.gov.uk/government/organisations\n",
+        "*   List item\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qp8kEO33XkV9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -1534,7 +1559,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM2vO0VBYZzZ+/MhTip3I+h",
+      "authorship_tag": "ABX9TyOT6YUwPZhVf6QT5YZovTBR",
       "include_colab_link": true
     },
     "kernelspec": {
