--- a/i_dot_ai_backup_final_3.ipynb
+++ b/i_dot_ai_backup_final_3.ipynb
@@ -42,12 +42,23 @@
         "# **The Problem**\n",
         "According to GOV.UK (n.d.a), the UK government comprises 24 Ministerial Departments, 20 Non-ministerial departments, 424 Agencies and other public bodies, 115 High Profile groups, and 19 Public corporations. This extensive organizational structure presents substantial opportunities for AI implementation across the public sector. However, finding and accessing potential AI use-cases for most impactful projects can be very challenging.\n",
         "\n",
-        "A good place to start and one strategy I will be adopting for this assessment is to follow the classification suggested by Incubator AI (2024) in their AI taxonomy. Where the decision on what AI use-case to deliver is guided by the user and technical challenge rather than by policy.\n",
+        "A good place to start and one strategy I will be adopting for this assessment is to follow the classification suggested by Incubator AI (2024) in their AI taxonomy, where the decision on what AI use-case to deliver is guided by the user and technical challenge rather than by policy.\n",
         "\n",
-        "Generally any individual making a transition from one thing to the other\n",
+        "Generally any individual making pivotal life transitions commonly experience the tension between embracing change and the human desire to want to stick with what's familiar. The AI use-cases for this kind of human challenge is therefore cross-government and applicable for any scenario where key life transition is happening. This falls perfectly under i.ai's Public facing services (GenAI & UI) taxonomy.\n",
         "\n",
+        "For purpose of this assessment, and the reason above, I have choosen an AI that focuses on the challenge users/new employees (such those just leaving school) often fear getting into or struggle settling in new roles.\n",
         "\n",
-        "Specifically, and for this assessment the focus is on users/new employees often struggle to settle into new roles following traditional onboarding techniques.\n",
+        "This maps well with the governments concern about Youth unemployment specified in chapter 4 of A Youth Guarantee to unleash opportunity and set young people on the path to success (GOV.UK, 2024a).\n",
+        "- Point 124: **Preventing young people from losing touch with education or employment pre-18**\n",
+        "The government is committed to acting and intervening early to ensure young people are in employment, education or training at or after becoming 18 by:\n",
+        "    - Subpoint 4\n",
+        "        \n",
+        "        > **Offer work experience and careers advice**\n",
+        "        >\n",
+        "        >\n",
+        "        > We will ensure young people are able to confidently identify their next steps and benefit from an introduction to the world of work through our careers offer in schools and colleges, including early steps towards delivering 2 weeks’ worth of work experience. Working in partnership with local stakeholders, the new jobs and careers service will also provide support where needed for young people aged under 18 who are not in school or college.\n",
+        "        >\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -1536,8 +1547,13 @@
       "source": [
         "# **Reference**\n",
         "\n",
-        "*   GOV.UK. (n.d.a). Departments, agencies and public bodies. GOV.UK. Retrieved May 28, 2025, from https://www.gov.uk/government/organisations\n",
-        "*   List item\n",
+        "\n",
+        "\n",
+        "1.  GOV.UK (n.d.a) 'Departments, agencies and public bodies', GOV.UK. Available at: https://www.gov.uk/government/organisations (Accessed: 28 May 2025).\n",
+        "2.  Incubator AI (2024) 'The i.AI taxonomy', AI for Public Good. Available at: https://ai.gov.uk/blogs/the-i-ai-taxonomy/ (Accessed: 28 May 2025).\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -1559,7 +1575,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOT6YUwPZhVf6QT5YZovTBR",
+      "authorship_tag": "ABX9TyM7krOgziFp2GN5Ceb4D2Sv",
       "include_colab_link": true
     },
     "kernelspec": {
